Suppress spurious iajc warnings.
git-svn-id: http://lampsvn.epfl.ch/svn-repos/scala/scala-plugin-aspects/trunk@17676 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/org.scala-ide.sdt.aspects/build.xml
+++ b/org.scala-ide.sdt.aspects/build.xml
@@ -79,6 +79,7 @@ BUILD THE PLUGIN
       target="1.5"
       sourceroots="${basedir}/src"
       destdir="${build.dir}"
+      xlint="ignore"
       >
       <classpath>
         <pathelement path="${basedir}/lib/aspectjrt.jar"/>
