Only generate a single JDT package declaration for each Scala package introduction; equals and hashCode fixes for EclipseFile fixes issues with Companion objects; changes to accomodate BatchSourceFile now being readonly; retire redundant ActionContributor.
git-svn-id: http://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@18276 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/plugin.xml
+++ b/plugin.xml
@@ -54,7 +54,7 @@
             default="true"
             icon="icons/full/obj16/scu_obj.gif"
             extensions="scala"
-            contributorClass="scala.tools.eclipse.ActionContributor"
+            contributorClass="org.eclipse.jdt.internal.ui.javaeditor.CompilationUnitEditorActionContributor"
             class="scala.tools.eclipse.ScalaEditor"
             symbolicFontName="org.eclipse.jdt.ui.editors.textfont"
             id="scala.tools.eclipse.ScalaEditor">
