--- a/plugin.xml
+++ b/plugin.xml
@@ -287,7 +287,7 @@
          name="Scala Builder"
          point="org.eclipse.core.resources.builders">
       <builder hasNature="true">
-         <run class="scala.tools.eclipse.Builder"/>
+         <run class="scala.tools.eclipse.ScalaBuilder"/>
       </builder>
    </extension>
    <extension
