Updates for interactive compiler changes; clear error markers before files are recompiled; added devel.fastdist target to build.xml which delegates to scala/build.xml fastdist for faster test build creation.
git-svn-id: http://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@18428 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/build.xml
+++ b/build.xml
@@ -127,6 +127,16 @@ TARGETS SUPPORTING DEVELOPMENT WITHIN ECLIPSE
     <ant dir="${scala.plugin.aspects.dir}" antfile="build.xml" target="dist" inheritall="false"/>
     <antcall target="dist"/>
   </target>
+
+	<target name="devel.fastdist">
+    <ant dir="${scala.lib.dir}" antfile="build.xml" target="clean" inheritall="false"/>
+    <ant dir="${scala.plugin.aspects.dir}" antfile="build.xml" target="clean" inheritall="false"/>
+    <antcall target="clean"/>
+    <ant dir="${scala.dir}" antfile="build.xml" target="fastdist" inheritall="false"/>
+    <ant dir="${scala.lib.dir}" antfile="build.xml" target="dist" inheritall="false"/>
+    <ant dir="${scala.plugin.aspects.dir}" antfile="build.xml" target="dist" inheritall="false"/>
+    <antcall target="dist"/>
+  </target>
   
 <!-- ===========================================================================
 BUILD THE PLUGIN
