Scala sources are now indexed correctly by the JDT; progress on reinstating hyperlinking/open definition.
git-svn-id: http://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@18466 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/plugin.xml
+++ b/plugin.xml
@@ -521,6 +521,10 @@
   <extension point="ch.epfl.lamp.sdt.aspects.cfprovider">
     <provider class="scala.tools.eclipse.javaelements.ScalaClassFileProvider" />
   </extension>
+
+  <extension point="ch.epfl.lamp.sdt.aspects.indexerprovider">
+    <provider class="scala.tools.eclipse.ScalaSourceIndexerFactory" />
+  </extension>
   
   <extension point="org.eclipse.contribution.weaving.jdt.imagedescriptorselector">
     <selector
