Scala sources are now indexed correctly by the JDT; progress on reinstating hyperlinking/open definition.
git-svn-id: http://lampsvn.epfl.ch/svn-repos/scala/scala-plugin-aspects/trunk@18466 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/org.scala-ide.sdt.aspects/build.xml
+++ b/org.scala-ide.sdt.aspects/build.xml
@@ -108,6 +108,8 @@ BUILD THE PLUGIN
       destfile="${basedir}/${plugin.name}.jar"
       basedir="${build.dir}"
       manifest="${build.dir}/META-INF/MANIFEST.MF">
+    	<include name="plugin.xml"/>
+    	<include name="*.exsd"/>
       <include name="META-INF/aop.xml"/>
       <include name="**/*.class"/>
       <include name="**/*.properties"/>
