Actually include the classfile and indexer provider extension points in the build; make the JDTs change collector aware of Scala element nesting possibilities; ensure Java projects and their corresponding workspace resources are in sync; don't ask for problems for binary-only elements.
git-svn-id: http://lampsvn.epfl.ch/svn-repos/scala/scala-plugin-aspects/trunk@18915 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/org.scala-ide.sdt.aspects/build.xml
+++ b/org.scala-ide.sdt.aspects/build.xml
@@ -94,6 +94,9 @@ BUILD THE PLUGIN
     <mkdir dir="${build.dir}/META-INF"/>
     <copy file="${basedir}/META-INF/MANIFEST.MF" toDir="${build.dir}/META-INF" overwrite="yes"/>
     <copy file="${basedir}/META-INF/aop.xml" toDir="${build.dir}/META-INF" overwrite="yes"/>
+    <copy file="${basedir}/plugin.xml" toDir="${build.dir}" overwrite="yes"/>
+    <copy file="${basedir}/cfprovider.exsd" toDir="${build.dir}" overwrite="yes"/>
+    <copy file="${basedir}/indexerprovider.exsd" toDir="${build.dir}" overwrite="yes"/>
 
     <propertyfile file="${build.dir}/plugin.aspects.properties">
       <entry key="version.number" value="${plugin.aspects.version.number}"/>
