Initial support for find references (classes and traits only so far); Annotations in Scala source are now added to the JDTs model (JUnit 4 test annotations are now found by the JUnit tooling); added support for method override indicators and ruler-click navigation to implemented/overridden method; added support for Eclipse source bookmarks; a couple more lock-ordering issues resolved.
git-svn-id: http://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@19276 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/plugin.xml
+++ b/plugin.xml
@@ -80,6 +80,45 @@
             actionID="RulerDoubleClick"
             id="org.eclipse.jdt.debug.ui.actions.ManageBreakpointRulerAction">
          </action>
+         <action
+            label="Scala Editor Bookmark Ruler Action"
+            helpContextId="org.eclipse.ui.bookmark_action_context"
+            class="org.eclipse.ui.texteditor.BookmarkRulerAction"
+            actionID="RulerDoubleClick"
+            id="org.eclipse.jdt.internal.ui.javaeditor.BookmarkRulerAction">
+         </action>
+         <action
+            label="Scala Editor Ruler Single-Click"
+            class="org.eclipse.jdt.internal.ui.javaeditor.JavaSelectRulerAction"
+            actionID="RulerClick"
+            id="org.eclipse.jdt.internal.ui.javaeditor.JavaSelectRulerAction">
+         </action>
+      </editorContribution>
+   </extension>
+
+   <extension point="org.eclipse.ui.editorActions">
+      <editorContribution
+         targetID="scala.tools.eclipse.ScalaClassFileEditor"
+         id="org.eclipse.jdt.debug.CompilationUnitEditor.BreakpointRulerActions">
+         <action
+            label="Toggle &amp;Breakpoint"
+            class="org.eclipse.debug.ui.actions.RulerToggleBreakpointActionDelegate"
+            actionID="RulerDoubleClick"
+            id="org.eclipse.jdt.debug.ui.actions.ManageBreakpointRulerAction">
+         </action>
+         <action
+            label="Scala Editor Bookmark Ruler Action"
+            helpContextId="org.eclipse.ui.bookmark_action_context"
+            class="org.eclipse.ui.texteditor.BookmarkRulerAction"
+            actionID="RulerDoubleClick"
+            id="org.eclipse.jdt.internal.ui.javaeditor.BookmarkRulerAction">
+         </action>
+         <action
+            label="Scala Editor Ruler Single-Click"
+            class="org.eclipse.jdt.internal.ui.javaeditor.JavaSelectRulerAction"
+            actionID="RulerClick"
+            id="org.eclipse.jdt.internal.ui.javaeditor.JavaSelectRulerAction">
+         </action>
       </editorContribution>
    </extension>
 
