Fixed some more document provider related issues.
git-svn-id: http://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@19782 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/plugin.xml
+++ b/plugin.xml
@@ -136,8 +136,8 @@
       name="ScalaDocumentSetupParticipant"
       point="org.eclipse.core.filebuffers.documentSetup">
       <participant
-            class="scala.tools.eclipse.ui.ScalaDocumentSetupParticipant"
-            extensions="scala">
+         contentTypeId="scala.tools.eclipse.scalaSource"
+         class="org.eclipse.jdt.internal.ui.javaeditor.JavaDocumentSetupParticipant">
       </participant>
    </extension>
    <extension point="org.eclipse.ui.perspectives">
