--- a/plugin.xml
+++ b/plugin.xml
@@ -579,6 +579,20 @@
     <selector
       class="scala.tools.eclipse.javaelements.ScalaImageDescriptorSelector">
     </selector>
+  </extension>
+  <extension
+        point="org.eclipse.jdt.ui.quickFixProcessors">
+     <quickFixProcessor
+           class="scala.tools.eclipse.ScalaQuickFixProcessor"
+           id="scala-plugin.quickFixProcessor1">
+        <enablement>
+          <with variable="projectNatures">
+             <iterate operator="or">
+                <equals value="ch.epfl.lamp.sdt.core.scalanature"/>
+             </iterate>
+          </with>
+        </enablement>
+     </quickFixProcessor>
   </extension>  
   
 </plugin>
