--- a/plugin.xml
+++ b/plugin.xml
@@ -495,6 +495,14 @@
 
   </extension>
 
+  <extension
+         point="org.eclipse.ui.console.consoleFactories">
+      <consoleFactory
+            class="scala.tools.eclipse.interpreter.Factory"
+            icon="icons/full/etool16/scala_app.gif"
+            label="Scala Console"/>
+   </extension>	 
+
   <extension point="org.eclipse.ui.console.consolePageParticipants">
     <consolePageParticipant
       class="scala.tools.eclipse.interpreter.PageParticipant"
